--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="iH9KR2gPSueyptkQRMEQ4UmH10VdM6X4MrHVaw52d_s" />
     <title>Tourism in Spain</title>
 </head>
 <body>
