--- a/eat.html
+++ b/eat.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://slides.com/mietwagen1s
+" />
     <title>Tourism in Spain - Eat</title>
 </head>
 <body>
