--- a/attractions.html
+++ b/attractions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourism in Spain - Car Rental </title>
+    <title>Tourism in Spain - Attractions </title>
 </head>
 <body>
 <header>
