--- a/eat.html
+++ b/eat.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://slides.com/mietwagen1s
-" />
+    <meta http-equiv="refresh" content="0; url=https://www.zazzle.de/mbr/238147340639731227" />
     <title>Tourism in Spain - Eat </title>
 </head>
 <body>
