--- a/eat.html
+++ b/eat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://mietwagen1s-de.mystrikingly.com/" />
+    <meta http-equiv="refresh" content="0; url=https://faithlife.com/danielrestrepo" />
     <title>Tourism in Spain - Eat </title>
 </head>
 <body>
