--- a/renting.html
+++ b/renting.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://mietwagen1s-de.livejournal.com/profile" />
     <title>Tourism in Spain - Car Rental </title>
 </head>
 <body>
