--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=http://www.wikidot.com/user:info/mietwagen1s" />
     <title>Tourism in Spain - Hotels </title>
 </head>
 <body>
